# nodejs/rentalx/src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -4,17 +4,17 @@ import { container } from 'tsyringe';
 import { AuthenticateUserUseCase } from './AuthenticateUserUseCase';
 
 class AuthenticateUserController {
-  async handle(request: Request, response: Response): Promise<Response> {
-    const { email, password } = request.body;
+  async handle(req: Request, res: Response): Promise<Response> {
+    const { email, password } = req.body;
 
     const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
 
-    const token = await authenticateUserUseCase.execute({
+    const authenticationData = await authenticateUserUseCase.execute({
       email,
       password,
     });
 
-    return response.json(token);
+    return res.status(201).json(authenticationData);
   }
 }
 
